src/test/deca/context/invalid/types_incompatible_for_assignement.deca
//Test lève erreur en vérifiant la regle 3.8
//Resultat: 

{
    float x = 2.0;
    int y = x;
}